syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package auth;

service AuthService {
    rpc getRefreshTokenIsValid(IGetRefreshTokenIsValid) returns (google.protobuf.BoolValue) {}
    rpc getRefreshTokenAndIsNewUserByLogin(IGetRefreshTokenAndIsNewUserByLogin) returns (GetRefreshTokenAndIsNewUserByLoginResponse) {}
}

message IGetRefreshTokenIsValid {
    string refreshToken = 1;
    string userId = 2;
}

message IGetRefreshTokenAndIsNewUserByLogin {
    string email = 1;
    string username = 2;
    string department = 3;
    int32 grade = 4;
    int32 class = 5;
    int32 accountType = 6;
    int32 role = 7;
}

message IGetRefreshTokenAndIsNewUserByLoginResponse {
    string refreshToken = 1;
    bool isNewUser = 2;
}