syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package user;

service UserService {
    rpc getUserById(google.protobuf.StringValue) returns (User) {}
    rpc getUserByEmail(google.protobuf.StringValue) returns (User) {}
    rpc updateUser(UpdateUser) returns (User) {}
}

message UpdateUser {
    string id = 1;
    string description = 2;
    string image = 3;
    string backgroundImage = 4;
    string githubLink = 5;
    int32 clubId = 6;
}

message CreateUser {
    string email = 1;
    string username = 2;
    string department = 3;
    int32 grade = 4;
    int32 class = 5;
    int32 number = 6;
    int32 accountType = 7;
    int32 roleFlag = 8;
    string description = 9;
    string githubLink = 10;
    string image = 11;
    string backgroundImage = 12;
    int32 clubId = 13;
}

message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string department = 4;
    int32 grade = 5;
    int32 class = 6;
    int32 number = 7;
    int32 accountType = 8;
    int32 roleFlag = 9;
    string description = 10;
    string githubLink = 11;
    string image = 12;
    string backgroundImage = 13;
    int32 clubId = 14;
    string createdDate = 15;
    string updatedDate = 16;
}